Fixd the overflow issue 2.

--- a/Style.css
+++ b/Style.css
@@ -220,6 +220,7 @@ body {
   position: relative;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 .wgh-slider-viewbox {
   display: flex;
